--- a/src/main/resources/templates/instructorDashboard/fragments/coursesContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/coursesContent.html
@@ -160,11 +160,12 @@
                                        th:if="${course.status == 'draft'}">
                                         <i class="far fa-fw fa-edit"></i>
                                     </a>
-                                <form th:action="@{/instructordashboard/createcourse/deletecourse}" method="post">
-                                    <input type="hidden" name="courseId" th:value="${course.courseId}" />
-                                    <button type="submit" class="btn btn-sm btn-danger-soft btn-round mb-0"><i
-                                            class="fas fa-fw fa-times"></i></button>
-                                </form>
+                                    <!-- Delete Confirmation Modal -->
+                                    <form th:action="@{/instructordashboard/createcourse/deletecourse}" method="post" onsubmit="return confirm('Are you sure you want to delete this course?');">
+                                        <input type="hidden" name="courseId" th:value="${course.courseId}" />
+                                        <button type="submit" class="btn btn-sm btn-danger-soft btn-round mb-0"><i
+                                                class="fas fa-fw fa-times"></i></button>
+                                    </form>
                                 </td>
                             </tr>
                             </tbody>
@@ -172,7 +173,7 @@
                         </table>
                     </div>
                     <!-- Course list table END -->
-
+                   
                     <!-- Pagination START -->
                     <div class="d-sm-flex justify-content-sm-between align-items-sm-center mt-4 mt-sm-3">
                         <!-- Content -->
@@ -216,11 +217,13 @@
                             </ul>
                         </nav>
                         <!-- Card body START -->
+
                     </div>
                     <!-- Card END -->
                 </div>
                 <!-- Main content END -->
             </div><!-- Row END -->
+
             <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
             <!-- Vendors -->
