--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -71,9 +71,10 @@
                             <td th:text="${order.orderId} ?: 'N/A'"></td>
                             <td th:text="${order.amount} ?: 'N/A'"></td>
                             <td th:text="${order.orderType} ?: 'N/A'"></td>
-                            <td th:text="${order.status} ?: 'N/A'">
+                            <td>
                                 <span th:if="${order.status == 'PAID'}" class="badge bg-success">Paid</span>
                                 <span th:if="${order.status == 'REFUNDED'}" class="badge bg-warning">Refunded</span>
+                                <span th:if="${order.status != 'PAID' && order.status != 'REFUNDED'}" class="badge bg-secondary" th:text="${order.status} ?: 'N/A'"></span>
                             </td>
                             <td th:with="formatter=${#temporals.format(order.orderDate, 'dd/MM/yyyy HH:mm')}"
                                 th:text="${formatter}"></td>
