--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -80,6 +80,14 @@
                     </a>
                 </li>
 
+                <!-- Menu item 7 -->
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/businessRule}">
+                        <i class="fas fa-balance-scale"></i>
+                        <span>Business Rule</span>
+                    </a>
+                </li>
+
 
             </ul>
             <!-- Sidebar menu end -->
