--- a/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
@@ -59,7 +59,7 @@
             <!-- Instructor request table START -->
             <div id="requestTableWrapper" th:fragment="requestTableFragment">
                 <div class="table-responsive border-0">
-                    <table class="table table-dark-gray align-middle p-4 mb-0 table-hover">
+                    <table class="table table-dark-gray align-middle p-4 mb-0 table-hover ">
                         <!-- Table head -->
                         <thead>
                             <tr>
@@ -104,8 +104,8 @@
                                        th:onclick="'openRejectModal(' + ${request.requestId} + ')'">Reject</a>
 
                                     <a th:if="${request.status == 'ACCEPTED'}" href="#" class="btn btn-success me-1 mb-1 mb-md-0 disabled">Accepted</a>
-                                    <a th:if="${request.status == 'REJECTED'}" href="#" class="btn btn-secondary me-1 mb-1 mb-md-0 disabled">Rejected</a>
-                                    <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail" th:onclick="'loadRequestDetails(' + ${request.requestId} + ')'">View App</a>
+                                    <a th:if="${request.status == 'REJECTED'}" href="#" class="btn btn-danger me-1 mb-1 mb-md-0 disabled">Rejected</a>
+                                    <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail" th:onclick="'loadRequestDetails(' + ${request.requestId} + ')'">View Detail</In></a>
                                 </td>
                             </tr>
                         </tbody>
