update instrutor infomation

--- a/src/main/resources/templates/adminDashBoard/fragments/courseDetailContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseDetailContent.html
@@ -153,7 +153,7 @@
                 </span>
                         <span class="text-muted">
                     <i class="bi bi-clock me-1"></i>
-                    Review Due: <span th:text="${#temporals.format(detailCourse.updatedAt, 'MMM dd, yyyy')}">Date</span>
+<!--                    Review Due: <span th:text="${#temporals.format(detailCourse.updatedAt, 'MMM dd, yyyy')}">Date</span>-->
                 </span>
                     </div>
 
