--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -78,7 +78,7 @@
                             </td>
                             <td th:with="formatter=${#temporals.format(order.orderDate, 'dd/MM/yyyy HH:mm')}"
                                 th:text="${formatter}"></td>
-                            <td th:text="${order.note} ?: 'N/A'"></td>
+                            <td th:text="${order.refCode} ?: 'N/A'"></td>
                             <td th:text="${order.username} ?: 'N/A'"></td>
                             <td>
                                 <a th:href="@{/admin/orders/view/{orderId}(orderId=${order.orderId})}"
