--- a/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
@@ -103,7 +103,7 @@
                                        data-bs-toggle="modal" data-bs-target="#rejectModal" 
                                        th:onclick="'openRejectModal(' + ${request.requestId} + ')'">Reject</a>
 
-                                    <a th:if="${request.status == 'ACCEPTED'}" href="#" class="btn btn-success me-1 mb-1 mb-md-0 disabled">Accepted</a>
+                                    <a th:if="${request.status == 'APPROVED'}" href="#" class="btn btn-success me-1 mb-1 mb-md-0 disabled">Accepted</a>
                                     <a th:if="${request.status == 'REJECTED'}" href="#" class="btn btn-danger me-1 mb-1 mb-md-0 disabled">Rejected</a>
                                     <a href="#" class="btn btn-primary-soft me-1 mb-0" data-bs-toggle="modal" data-bs-target="#appDetail" th:onclick="'loadRequestDetails(' + ${request.requestId} + ')'">View Detail</In></a>
                                 </td>
