--- a/src/main/resources/templates/homePage/fragments/navHeader.html
+++ b/src/main/resources/templates/homePage/fragments/navHeader.html
@@ -1,9 +1,10 @@
-<header th:fragment="navHeader" class="navbar-light navbar-sticky header-static">
+<!-- Header START -->
+<header class="navbar-light navbar-sticky header-static" th:fragment="navHeader">
     <!-- Nav START -->
     <nav class="navbar navbar-expand-xl">
         <div class="container-fluid px-3 px-xl-5">
             <!-- Logo START -->
-            <a class="navbar-brand" th:href="@{/}">
+            <a class="navbar-brand" href="index.html">
                 <img class="light-mode-item navbar-brand-item" src="assets/images/logo.svg" alt="logo">
                 <img class="dark-mode-item navbar-brand-item" src="assets/images/logo-light.svg" alt="logo">
             </a>
@@ -28,21 +29,34 @@
                     <!-- Nav item 1 Demos -->
                     <li class="nav-item dropdown dropdown-menu-shadow-stacked">
                         <a class="nav-link bg-primary bg-opacity-10 rounded-3 text-primary px-3 py-3 py-xl-0" href="#"
-                            id="categoryMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                                class="bi bi-ui-radios-grid me-2"></i><span>Category</span></a>
-                        <ul class="dropdown-menu" aria-labelledby="categoryMenu" id="categoryDropdown">
-                            <li th:each="category : ${categories}">
-                                <a class="dropdown-item" href="#" th:text="${category.name}">Category</a>
+                            id="categoryMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="bi bi-ui-radios-grid me-2"></i><span>Category</span>
+                        </a>
+
+                        <ul class="dropdown-menu" aria-labelledby="categoryMenu">
+                            <!-- Hiển thị 5 category đầu tiên -->
+                            <li th:each="cat : ${firstFive}">
+                                <a class="dropdown-item" th:text="${cat.name}"
+                                    th:href="@{/courses/category/{id}(id=${cat.id})}"></a>
                             </li>
+
+                            <!-- Nút View all -->
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li>
                                 <a class="dropdown-item bg-primary text-primary bg-opacity-10 rounded-2 mb-0" href="#"
-                                    id="viewAllCategoriesBtn">View all categories</a>
+                                    onclick="toggleMoreCategories(event)">View all categories</a>
+                            </li>
+
+                            <!-- Hiển thị 5 category tiếp theo khi click -->
+                            <li id="moreCategories" style="display:none;" th:each="cat : ${nextFive}">
+                                <a class="dropdown-item" th:text="${cat.name}"
+                                    th:href="@{/courses/category/{id}(id=${cat.id})}"></a>
                             </li>
                         </ul>
                     </li>
+
                 </ul>
                 <!-- Nav category menu END -->
 
@@ -77,27 +91,23 @@
                             <li class="dropdown-submenu dropend">
                                 <a class="dropdown-item dropdown-toggle" href="#">Course</a>
                                 <ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
-                                    <li> <a class="dropdown-item" href="course-categories.html">Course
-                                            Categories</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li> <a class="dropdown-item" href="course-grid.html">Course Grid Classic</a>
-                                    </li>
-                                    <li> <a class="dropdown-item" href="course-grid-2.html">Course Grid Minimal</a>
+                                    <li> <a class="dropdown-item" href="course-categories.html">Course Categories</a>
                                     </li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li> <a class="dropdown-item" th:href="@{/courses}">Course List Classic</a>
-                                    </li>
-                                    <li> <a class="dropdown-item" href="course-list-2.html">Course List Minimal</a>
-                                    </li>
+                                    <li> <a class="dropdown-item" href="course-grid.html">Course Grid Classic</a></li>
+                                    <li> <a class="dropdown-item" href="course-grid-2.html">Course Grid Minimal</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li> <a class="dropdown-item" href="course-detail.html">Course Detail
-                                            Classic</a></li>
+                                    <li> <a class="dropdown-item" href="course-list.html">Course List Classic</a></li>
+                                    <li> <a class="dropdown-item" href="course-list-2.html">Course List Minimal</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li> <a class="dropdown-item" href="course-detail.html">Course Detail Classic</a>
+                                    </li>
                                     <li> <a class="dropdown-item" href="course-detail-min.html">Course Detail
                                             Minimal</a></li>
                                     <li> <a class="dropdown-item" href="course-detail-adv.html">Course Detail
@@ -126,10 +136,8 @@
                             <li class="dropdown-submenu dropend">
                                 <a class="dropdown-item dropdown-toggle" href="#">Hero Banner</a>
                                 <ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
-                                    <li> <a class="dropdown-item" href="docs/snippet-hero-12.html">Hero Form</a>
-                                    </li>
-                                    <li> <a class="dropdown-item" href="docs/snippet-hero-13.html">Hero Vector</a>
-                                    </li>
+                                    <li> <a class="dropdown-item" href="docs/snippet-hero-12.html">Hero Form</a></li>
+                                    <li> <a class="dropdown-item" href="docs/snippet-hero-13.html">Hero Vector</a></li>
                                     <li>
                                         <p class="dropdown-item mb-0">Coming soon....</p>
                                     </li>
@@ -138,8 +146,7 @@
 
                             <li> <a class="dropdown-item" href="instructor-list.html">Instructor List</a></li>
                             <li> <a class="dropdown-item" href="instructor-single.html">Instructor Single</a></li>
-                            <li> <a class="dropdown-item" href="become-instructor.html">Become an Instructor</a>
-                            </li>
+                            <li> <a class="dropdown-item" href="become-instructor.html">Become an Instructor</a></li>
                             <li> <a class="dropdown-item" href="abroad-single.html">Abroad Single</a></li>
                             <li> <a class="dropdown-item" href="workshop-detail.html">Workshop Detail</a></li>
                             <li> <a class="dropdown-item" href="event-detail.html">Event Detail</a></li>
@@ -163,8 +170,8 @@
                                 <a class="dropdown-item dropdown-toggle" href="#">Help</a>
                                 <ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
                                     <li> <a class="dropdown-item" href="help-center.html">Help Center</a></li>
-                                    <li> <a class="dropdown-item" href="help-center-detail.html">Help Center
-                                            Single</a></li>
+                                    <li> <a class="dropdown-item" href="help-center-detail.html">Help Center Single</a>
+                                    </li>
                                     <li> <a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 </ul>
                             </li>
@@ -175,8 +182,7 @@
                                 <ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
                                     <li> <a class="dropdown-item" href="sign-in.html">Sign In</a></li>
                                     <li> <a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
-                                    <li> <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
-                                    </li>
+                                    <li> <a class="dropdown-item" href="forgot-password.html">Forgot Password</a></li>
                                 </ul>
                             </li>
 
@@ -219,8 +225,8 @@
                                     <li> <a class="dropdown-item" href="instructor-manage-course.html"><i
                                                 class="bi bi-basket-fill fa-fw me-1"></i>Courses</a> </li>
                                     <li> <a class="dropdown-item" href="instructor-create-course.html"><i
-                                                class="bi bi-file-earmark-plus-fill fa-fw me-1"></i>Create
-                                            Course</a> </li>
+                                                class="bi bi-file-earmark-plus-fill fa-fw me-1"></i>Create Course</a>
+                                    </li>
                                     <li> <a class="dropdown-item" href="course-added.html"><i
                                                 class="bi bi-file-check-fill fa-fw me-1"></i>Course Added</a> </li>
                                     <li> <a class="dropdown-item" href="instructor-quiz.html"><i
@@ -246,8 +252,7 @@
                                     <li> <a class="dropdown-item" href="student-dashboard.html"><i
                                                 class="bi bi-grid-fill fa-fw me-1"></i>Dashboard</a> </li>
                                     <li> <a class="dropdown-item" href="student-subscription.html"><i
-                                                class="bi bi-card-checklist fa-fw me-1"></i>My Subscriptions</a>
-                                    </li>
+                                                class="bi bi-card-checklist fa-fw me-1"></i>My Subscriptions</a> </li>
                                     <li> <a class="dropdown-item" href="student-course-list.html"><i
                                                 class="bi bi-basket-fill fa-fw me-1"></i>Courses</a> </li>
                                     <li> <a class="dropdown-item" href="student-course-resume.html"><i
@@ -255,8 +260,8 @@
                                     <li> <a class="dropdown-item" href="student-quiz.html"><i
                                                 class="bi bi-question-diamond fa-fw me-1"></i>Quiz </a> </li>
                                     <li> <a class="dropdown-item" href="student-payment-info.html"><i
-                                                class="bi bi-credit-card-2-front-fill fa-fw me-1"></i>Payment
-                                            Info</a> </li>
+                                                class="bi bi-credit-card-2-front-fill fa-fw me-1"></i>Payment Info</a>
+                                    </li>
                                     <li> <a class="dropdown-item" href="student-bookmark.html"><i
                                                 class="fas bi-cart-check-fill fa-fw me-1"></i>Wishlist</a> </li>
                                 </ul>
@@ -389,8 +394,7 @@
                                     </div>
                                     <!-- Dropdown item -->
                                     <div class="d-flex mb-4 position-relative">
-                                        <h2 class="mb-0"><i class="fas fa-fw fa-basketball-ball text-dribbble"></i>
-                                        </h2>
+                                        <h2 class="mb-0"><i class="fas fa-fw fa-basketball-ball text-dribbble"></i></h2>
                                         <div class="ms-2">
                                             <a class="stretched-link h6 mb-0" href="#">Creative graphics design</a>
                                             <p class="mb-0 small">No prerequisites</p>
@@ -507,11 +511,76 @@
             <!-- Main navbar END -->
 
             <!-- Profile START -->
-            <div class="navbar-nav ms-2">
-                <button class="btn btn-sm btn-dark mb-0"><i class="bi bi-power me-2"></i>Sign In</button>
+            <div class="dropdown ms-1 ms-lg-0">
+                <a class="avatar avatar-sm p-0" href="#" id="profileDropdown" role="button" data-bs-auto-close="outside"
+                    data-bs-display="static" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt="avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-animation dropdown-menu-end shadow pt-3"
+                    aria-labelledby="profileDropdown">
+                    <!-- Profile info -->
+                    <li class="px-3 mb-3">
+                        <div class="d-flex align-items-center">
+                            <!-- Avatar -->
+                            <div class="avatar me-3">
+                                <img class="avatar-img rounded-circle shadow" src="assets/images/avatar/01.jpg"
+                                    alt="avatar">
+                            </div>
+                            <div>
+                                <a class="h6" href="#">Lori Ferguson</a>
+                                <p class="small m-0">example@gmail.com</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <!-- Links -->
+                    <li><a class="dropdown-item" href="#"><i class="bi bi-person fa-fw me-2"></i>Edit Profile</a></li>
+                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Account Settings</a></li>
+                    <li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a></li>
+                    <li><a class="dropdown-item bg-danger-soft-hover" href="#"><i
+                                class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <!-- Dark mode options START -->
+                    <li>
+                        <div
+                            class="bg-light dark-mode-switch theme-icon-active d-flex align-items-center p-1 rounded mt-2">
+                            <button type="button" class="btn btn-sm mb-0" data-bs-theme-value="light">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-sun fa-fw mode-switch" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+                                    <use href="#"></use>
+                                </svg> Light
+                            </button>
+                            <button type="button" class="btn btn-sm mb-0" data-bs-theme-value="dark">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-moon-stars fa-fw mode-switch" viewBox="0 0 16 16">
+                                    <path
+                                        d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z" />
+                                    <path
+                                        d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+                                    <use href="#"></use>
+                                </svg> Dark
+                            </button>
+                            <button type="button" class="btn btn-sm mb-0 active" data-bs-theme-value="auto">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-circle-half fa-fw mode-switch" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
+                                    <use href="#"></use>
+                                </svg> Auto
+                            </button>
+                        </div>
+                    </li>
+                    <!-- Dark mode options END-->
+                </ul>
             </div>
             <!-- Profile START -->
         </div>
     </nav>
     <!-- Nav END -->
 </header>
+<!-- Header END -->
