feat: Enhance course display and sorting
- Add `totalLessons` and `totalStudentEnrolled` fields to `CourseDTO`.
- Update `Course` entity and `CourseMapper` to include these new fields.
- Change the sorting criteria for "Most Popular" courses from total ratings to total enrolled students.
- Implement a method to fetch top 5 courses based on total enrolled students for the homepage.
- Update relevant templates to display the new course information and reflect changes in course listing and homepage display.

--- a/src/main/resources/templates/homePage/course-grid.html
+++ b/src/main/resources/templates/homePage/course-grid.html
@@ -979,7 +979,7 @@ Footer END -->
 				console.log('-----------------------------');
 
 				$.ajax({
-					url: 'fragments/coursesGrid',
+					url: '/fragments/coursesGrid',
 					type: 'GET',
 					data: {
 						categoryIds: selectedCategories,
