--- a/src/main/resources/templates/homePage/fragments/cardCourse.html
+++ b/src/main/resources/templates/homePage/fragments/cardCourse.html
@@ -25,12 +25,12 @@
                             settling.</p>
                         <!-- Rating star -->
                         <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0 small"><i class="far fa-star text-warning"></i></li>
-                            <li class="list-inline-item ms-2 h6 fw-light mb-0">4.0/5.0</li>
+                            <li class="list-inline-item me-0 small" th:each="i : ${#numbers.sequence(1, 5)}">
+                                <i th:classappend="${i le course.averageRating ? 'fas fa-star' : 'far fa-star'}"
+                                    class="text-warning"></i>
+                            </li>
+                            <li class="list-inline-item ms-2 h6 fw-light mb-0"
+                                th:text="${course.averageRating} + '/5.0'">4.0/5.0</li>
                         </ul>
                     </div>
                     <!-- Card footer -->
@@ -38,7 +38,7 @@
                         <hr>
                         <div class="d-flex justify-content-between">
                             <span class="h6 fw-light mb-0"><i class="far fa-clock text-danger me-2"></i><span
-                                    th:text="${course.getDuration() + 'h'}">12h 56m</span></span>
+                                    th:text="${course.getDuration()/60 + 'h'}">12h 56m</span></span>
                             <span class="h6 fw-light mb-0"><i class="fas fa-table text-orange me-2"></i><span
                                     th:text="${course.getTotalLessons() + ' lectures'}">15</span></span>
                         </div>
