--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -15,8 +15,8 @@
                     <p class="mb-2 text-truncate-2" th:text="${course.description}"></p>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                        <li class="list-inline-item ms-2 h6 fw-light mb-0"
-                            th:text="${course.totalRatings} + ' Ratings'">4.0/5.0</li>
+                        <li class="list-inline-item ms-2 h6 fw-light mb-0" th:text="${course.reviewCount} + ' Ratings'">
+                            4.0/5.0</li>
                     </ul>
                 </div>
                 <div class="card-footer pt-0 pb-3">
@@ -24,7 +24,7 @@
                     <div class="d-flex justify-content-between">
                         <span class="h6 fw-light mb-0">
                             <i class="far fa-clock text-danger me-2"></i>
-                            <span th:text="${course.duration} + 'h'">12h</span>
+                            <span th:text="${course.duration/60} + 'h'">12h</span>
                         </span>
                         <span class="h6 fw-light mb-0">
                             <i class="fas fa-table text-orange me-2"></i>
